# FluoroView

./: .gitignore  CITATION.cff  LICENSE  README.md  fluoro_view.py  paper.bib  paper.md  pyproject.toml  run_fluoroview.py  test_np_brush.py
.github/workflows/: pylint.yml  python-app.yml
example_data/: BEMS340264_Scene-002_cell_mask.tif  Cytoplasm_channel_18.tif  ECM_16.tif  Membrane_channel_25.tif  Nuclear_membrane_channel_20.tif  Nuclei_channel_8.tif  README.md
figures/: FIGURE_1_architecture.md  FIGURE_2_viewer.md  FIGURE_3_rois.md  FIGURE_4_annotations.md  FIGURE_5_segmentation.md  FIGURE_6_cellanalysis.md  FIGURE_7_aichat.md  FIGURE_overview.md
fluoroview/: __init__.py  __main__.py  app.py  constants.py  requirements.txt
fluoroview/ai/: __init__.py  chat_ui.py  providers.py  version_control.py
fluoroview/analysis/: __init__.py  cell_group_analysis.py  intensity.py  phenotype.py  quantification.py  spatial.py
fluoroview/core/: __init__.py  annotations.py  channel.py  roi.py  session.py  tile_engine.py
fluoroview/icons/: generate_icons.py
fluoroview/io/: __init__.py  export.py  formats.py  session_io.py
fluoroview/segmentation/: __init__.py  base.py  cellpose_seg.py  deepcell_seg.py  mask_import.py  overlay.py
fluoroview/ui/: __init__.py  annotation_panel.py  channel_control.py  glass_widgets.py  ios_theme.json  theme.py  tooltip.py
fluoroview/ui/popups/: __init__.py  cell_analysis.py  mask_popup.py  merge_popup.py  phenotype_popup.py
tests/: test_core.py
