[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluoroview"
version = "2.0.0"
description = "Interactive multiplex fluorescence microscopy viewer, annotation, and single-cell phenotyping tool"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Arvin Haj-Mirzaian", email = "ahajmirzaian@mgh.harvard.edu"},
    {name = "Pedram Heidari", email = "Heidari.Pedram@mgh.harvard.edu"},
]
keywords = [
    "fluorescence microscopy",
    "multiplex imaging",
    "cell segmentation",
    "single-cell analysis",
    "cell phenotyping",
    "digital pathology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24,<2",
    "tifffile>=2023.7",
    "Pillow>=10.0",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "opencv-python-headless>=4.8",
    "customtkinter>=5.0",
]

[project.optional-dependencies]
cellpose = ["cellpose>=3.0"]
deepcell = ["tensorflow", "deepcell"]
dev = ["pytest", "flake8"]

[project.scripts]
fluoroview = "fluoroview.app:main"

[project.urls]
Homepage = "https://github.com/arvinhm/FluoroView"
Repository = "https://github.com/arvinhm/FluoroView"
Issues = "https://github.com/arvinhm/FluoroView/issues"

[tool.setuptools.packages.find]
include = ["fluoroview*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
